<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nen2"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_setting"
        android:layout_width="match_parent"
        android:text="@string/setting"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:layout_height="100dp" />

       <Button
           android:id="@+id/btn_album"
           android:layout_width="match_parent"
           android:layout_margin="50dp"
           android:text="@string/txt_album"
           android:textSize="30sp"
           android:padding="10dp"
           android:background="@drawable/icon_gradient"
           android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@drawable/icon_gradient"
        android:layout_marginRight="50dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:text="@string/share_app"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_review"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@drawable/icon_gradient"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:text="@string/reviews"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_unistall"
        android:layout_width="match_parent"
        android:layout_marginLeft="50dp"
        android:background="@drawable/icon_gradient"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:text="@string/unistall"
        android:layout_height="wrap_content" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/view_ads_setting"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:adSize="BANNER"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>
</LinearLayout>