<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- コンテンツ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <!-- タイトル -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            />

        <!-- メッセージ -->
        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:lineSpacingExtra="6dp"
            android:textSize="16sp"
            android:textColor="#333333"
            />

       <LinearLayout
           android:layout_width="wrap_content"
           android:orientation="horizontal"
           android:layout_height="wrap_content">
           <!-- OK ボタン -->
           <Button
               android:id="@+id/btn_cancel_dg"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="6dp"
               android:background="@drawable/bt_dialog_positive"
               android:text="@string/txt_cancel"
               android:textColor="@android:color/white"
               tools:ignore="ButtonStyle" />
           <!-- OK ボタン -->
           <Button
               android:id="@+id/positive_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="6dp"
               android:background="@drawable/bt_dialog_positive"
               android:text="@string/btn_ok"
               android:textColor="@android:color/white"
               tools:ignore="ButtonStyle" />

       </LinearLayout>

    </LinearLayout>

    <!-- Close ボタン -->
    <Button
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bt_dialog_close"
        android:text="@string/btn_x"
        android:textColor="#9acd32"
        />

</RelativeLayout>