<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <com.google.android.gms.ads.AdView
            android:id="@+id/ads_top"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            ads:adSize="SMART_BANNER"
            android:layout_toLeftOf="@+id/ads_function"
            android:layout_toStartOf="@+id/ads_function"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/ads_function"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:contentDescription="@string/txt_create"
            android:src="@drawable/ic_brightness_high_black_24dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_function"
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:longClickable="true"
            />
        <ImageView
            android:id="@+id/img_frame"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/ads_bottom"
        android:layout_width="match_parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_weight="1"
        android:layout_height="0dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/crop__selector_focused"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/click_frame"
            android:src="@drawable/ic_camera_black_24dp"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_row_image_change"
            android:contentDescription="@string/txt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/click_text"
            android:src="@drawable/ic_brightness_1_black_24dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_row_image_change"
            android:contentDescription="@string/txt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/click_icon"
            android:src="@drawable/ic_brightness_high_black_24dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_row_image_change"
            android:contentDescription="@string/txt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>