<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_quangcao"
        android:layout_width="match_parent"
        android:padding="1dp"
        android:layout_height="wrap_content">
        <com.google.android.gms.ads.AdView
            android:id="@+id/ads_function"
            android:layout_width="match_parent"
            ads:adSize="BANNER"
            android:layout_toLeftOf="@+id/img_save"
            android:layout_toStartOf="@+id/img_save"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_save"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_camera_black_24dp"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/txt_create"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_frame"
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_quangcao"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:layout_above="@+id/rl_function"
        android:layout_height="match_parent">

        <com.anhttvn.framesphotoart.util.StickerImageView
            android:id="@+id/img_photo"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_frame"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="match_parent" />
    </RelativeLayout>


    <HorizontalScrollView
        android:id="@+id/rl_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/boder_shadown_rl"

        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/boder_shadown_rl"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:onClick="clickHide"
                android:background="@drawable/boder_ll_shadown"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_broken_image_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/select_ll"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/boder_ll_shadown"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:onClick="clickShow"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_favorite_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:onClick="clickFrame"
                android:background="@drawable/boder_ll_shadown"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_local_florist_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/boder_ll_shadown"
                android:layout_margin="10dp"
                android:onClick="clickPhoto"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_broken_image_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/boder_ll_shadown"
                android:layout_margin="10dp"
                android:onClick="clickCrop"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_local_mall_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/boder_ll_shadown"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:onClick="clickText"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_local_mall_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/boder_ll_shadown"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:onClick="clickTicker"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:src="@drawable/ic_local_mall_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>